봇 스폰 로직 개선 - 탐색 및 도달 불가능 위치에 스폰되는 현상 방지
VirtualTexture 옵션 비활성

데이터 설정 일부 변경

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -103,7 +103,7 @@ DefaultServices=Null
 [/Script/Engine.RendererSettings]
 r.SkinCache.CompileShaders=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
-r.VirtualTextures=True
+r.VirtualTextures=False
 r.VirtualTexturedLightmaps=False
 r.SupportMaterialLayers=True
 r.GPUSkin.Support16BitBoneIndex=True
