--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,7 @@ Plugins/GameFeatures/TestPlay/Content/NonCommit/
 Plugins/GameFeatures/TestPlay/Content/Map/
 Plugins/GameFeatures/TestPlay/Content/__ExternalActors__/
 Plugins/GameFeatures/TestPlay/Content/__ExternalObjects__/
+
+Packaged/
+
+Releases/
