Lyra 슈팅모드 추가
미사용 애셋 삭제
일부 BP, 데이터 애셋 설정 변경

언리얼 에디터 내부의 Python VM 간의 통신 채널
- Python Bridge
- PythonScriptPlugin, RemoteControlAPI 플러그인 활성

실행 버전 기본맵 설정 변경
- DefaultEngine.ini

미사용 GameFeature 모드 비활성

UAnimNotifyState_MeleeTrace 개선
- 에디터 뷰 무기 오브젝트 스폰 처리 수정

--- a/LyraStarterGame.uproject
+++ b/LyraStarterGame.uproject
@@ -288,23 +288,7 @@
 			"Enabled": true
 		},
 		{
-			"Name": "ShooterMaps",
-			"Enabled": true
-		},
-		{
-			"Name": "TopDownArena",
-			"Enabled": true
-		},
-		{
 			"Name": "FunctionalTestingEditor",
-			"Enabled": true
-		},
-		{
-			"Name": "ShooterExplorer",
-			"Enabled": true
-		},
-		{
-			"Name": "ShooterTests",
 			"Enabled": true
 		},
 		{
@@ -382,6 +366,14 @@
 		{
 			"Name": "TestPlay",
 			"Enabled": true
+		},
+		{
+			"Name": "PythonScriptPlugin",
+			"Enabled": true
+		},
+		{
+			"Name": "RemoteControlAPI",
+			"Enabled": false
 		}
 	],
 	"EpicSampleNameHash": "451731683"
