--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -66,7 +66,7 @@ ScriptStackOnWarnings=true
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/B_LyraGameMode.B_LyraGameMode_C
 GameInstanceClass=/Game/B_LyraGameInstance.B_LyraGameInstance_C
-GameDefaultMap=/Game/System/FrontEnd/Maps/L_LyraFrontEnd.L_LyraFrontEnd
+GameDefaultMap=/Game/System/DefaultEditorMap/L_DefaultEditorOverview.L_DefaultEditorOverview
 EditorStartupMap=/Game/System/DefaultEditorMap/L_DefaultEditorOverview.L_DefaultEditorOverview
 ;TransitionMap=/Game/System/TransitionMap.TransitionMap ; Enable a real seamless travel transition map if needed to delay loading
 
